--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-109651657-1');
 </script>
 </head>
@@ -23,25 +22,42 @@
 
 <body>
 	<center><div class="header">
-		<a href="comics.html#dailies"><img class="img-circle" src="dailies.jpg.jpg" alt=""Dailies"" border="4px solid black"  width="200" height="200" /></a>
-		<a href="comics.html#all-my-friends-are-machines"><img class="img-circle" src="amfam.jpg.jpg" alt="All My Friends Are Machines" border="4px solid black" width="200" height="200" /></a>
+		<a href="comics.html#dailies"><img class="img-circle" src="dailies.jpg.jpg" alt="Dailies" border="4px solid black"  width="200" height="200" /></a>
+		<a href="comics.html#intimacy"><img class="img-circle" src="intimacy.jpg" alt="Intimacy" border="4px solid black" width="200" height="200" /></a>
 		<a href="comics.html#short-stories"><img class="img-circle" src="short-stories.jpg.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
 	</div></center>
 	<div class="navigation"><center>
-		<a href="index.html"><img src="home.PNG" border=0></a>
-		<a href="about.html"><img src="about.PNG" border=0></a>
-		<a href="comics.html"><img src="comics.PNG" border=0></a>
-		<a href="podcast.html"><img src="podcast.PNG" border=0></a>
-		<a href="follow.html"><img src="follow.PNG" border=0></a>
+		<a href="index.html"><img src="home.PNG" alt="home" border=0></a>
+		<a href="about.html"><img src="about.PNG" alt="about" border=0></a>
+		<a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
+		<a href="podcast.html"><img src="podcast.PNG" alt="podcast" border=0></a>
+		<a href="follow.html"><img src="follow.PNG" alt="follow" border=0></a>
 		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
 		<!-- <a href="/support.html"><img src="" border=0></a> -->
 	</div><table class="homepage"><tr>
-	<td style="text-align: right;"><h1></h1><a href="two-anatomies-of-loneliness.html"><img src="newest.PNG" alt="NEWEST COMIC:" width="230px" height="50px"/></a><br/><br/><br/><a href="all-my-friends-are-machines43.html"><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><a href="all-my-friends-are-machines1.html"><img src="first.PNG" alt="first" width="70px" height="36px"/></a></td>
-	<td><img src="Two-Anatomies1.png" width="600" height="800"/></td>
-	<td><img src="Two-Anatomies2.png" width="600" height="800"/></td>
-</tr></table>
+	<td style="text-align: right;"><h1></h1><a href="intimacy.html"><img src="newest.PNG" alt="NEWEST COMIC:" width="230px" height="50px"/></a><br/><br/><br/><a href="two-anatomies-of-loneliness.html"><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><!-- <a href="all-my-friends-are-machines1.html"><img src="first.PNG" alt="first" width="70px" height="36px"/> --></a></td>
+<td>
+	<img src="intimacy1.JPG" width="900" height="725"/>
+	<img src="intimacy2.jpg" width="900" height="725"/>
+	<img src="intimacy3.jpg" width="900" height="725"/>
+	<img src="intimacy4.jpg" width="900" height="725"/>
+	<img src="intimacy5.jpg" width="900" height="725"/>
+	<img src="intimacy6.jpg" width="900" height="725"/>
+	<img src="intimacy7.JPG" width="900" height="725"/>
+	<img src="intimacy8.jpg" width="900" height="725"/>
+	<img src="intimacy9.jpg" width="900" height="725"/>
+	<img src="intimacy10.jpg" width="900" height="725"/>
+	<img src="intimacy11.jpg" width="900" height="725"/>
+	<img src="intimacy12.jpg" width="900" height="725"/>
+	<img src="intimacy13.jpg" width="900" height="725"/>
+	<img src="intimacy14.jpg" width="900" height="725"/>
+	<img src="intimacy15.jpg" width="900" height="725"/>
+	<img src="intimacy16.jpg" width="900" height="725"/>
+	<img src="intimacy17.jpg" width="900" height="725"/>
+</td></tr></table>
 	<div class="blog"><h3><span style="font-size: 20px;">W</span>ELCOME TO <span style="font-size: 20px;">A</span>RTHROPUNK</h3>
 	<p class="nomargin">
+	<i>~July 2018~</i><br/><br>We're back with a new comic and its a bit of an Arthrobomb, the seventeen page, sixty-four panel <a href="comics.html#intimacy">"Intimacy"</a>. While I have enjoyed making this comic, I promise this will be the last color comic produced with what I call my "field setup", and I intend to be shifting to a less spartan approach once I'm more sedentary and as I prepare work on the next series of comics.<br/><br/>As you may have surmised the "All My Friends Are Machines" is on idefinitely hiatus. Frankly, I was bored with the story and I've decided to shift and work on other long-form stories featuring the same characters. While I prepare that story, I'll pop back in now and then with more <a href="comics.html#dailies">dailies</a><br/><br/>Much thanks and much love!<br/><br/><br/>
 	<i>~April 2018~</i><br/><br/>The hiatus is finally broken, but updates for <a href="comics.html#all-my-friends-are-machines">"All My Friends Are Machines"</a> won't be coming back for a while. I'm going to be focusing on little projects for a bit, for example <a href="two-anatomies-of-loneliness.html">"Two Anatomies of Loneliness"</a> and an Arthropunk story called "Intimacy". Check back soon for more comics!<br/><br/><br/>
 	<i>~February 2018~</i><br/><br/>Quick little update: it is Chinese New Year, and I am in China. Updates are on hold until festivities conclude. Happy year of the dog!<br/><br/><br/>
 	<i>~November 2017~</i><br/><br/>Finally, the <i>Arthropunk</i> website is up and running! Thanks to everybody who helped me out in putting together this website. You know who you are and I owe you cake.<br/><br/><i>Arthropunk</i> is a comic by Vernon Meidlinger-Chin. If this is your first time here, take a look at the "<a href="comics.html#dailies">Dailies</a>" to get a sense of the humor and style of the comic. If you're already on board, try digging into the ongoing graphic novel <i><a href="comics.html#all-my-friends-are-machines">All My Friends Are Machines</a></i>.<br/><br/>Also available for your pleasure are other, non-<i>Arthropunk</i> projects: a handful of comic <a href="comics.html#short-stories">short stories</a> as well as the <a href="podcast.html">Pencil Arms Podcast</a>. And, if it's something you're into, follow <i>Arthropunk</i> on <a href="follow.html">social media</a>.<br/><br/><br/>Enjoy!<br/><br/>Vernon<br/><br/></p></div>
