--- a/intimacy1.html
+++ b/intimacy1.html
@@ -28,7 +28,7 @@
 	<!-- <a href="Webcomic/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
 	<!-- <a href="Webcomic/support.html"><img src="" border=0></a> -->
 </div>
- <br/><img src="intimacy1.JPG" width="900" height="725"/><br />
+ <br/><img src="intimacy1.jpg" width="900" height="725"/><br />
   <a href="intimacy2.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a>
 </center>
 
